<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/teal_200"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="@string/add_to_do"
        android:textColor="#546E7A"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edt_to_do_name"
        style="@style/edit_style"
        android:hint="@string/to_do_name"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_to_do_description"
        style="@style/edit_style"
        android:hint="@string/to_do_description3"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:autofillHints=""
        android:inputType="text" />

    <Spinner
        android:id="@+id/spiner_add_to_do"
        style="@style/spiner_style"

        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_do"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edt_to_do_create_data"
        style="@style/edit_style"
        android:hint="@string/to_do_create_data"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_dedline"
        style="@style/edit_style"
        android:hint="@string/to_do_dedline3"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_save_add_to_do"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#5E35B1"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />

</LinearLayout>